--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img src="image0.jpeg"
+            <img src="image0.jpeg">
             <nav>
                 <div class="bar">
                 <ul>
@@ -41,9 +41,9 @@
             <section id="business">
                 <div class="section-inner">
                     <h2>This is my Business</h2>
-                    <img src="A82E395C-F57D-434D-86C3-D88873D6321E.jpg" class ="milktea" alt = "milktea ">
-                    <img src="IMG_5467.jpg" class ="totebag" alt = "tote bag ">
-                    <img src="IMG_5636.jpg" class ="necklace" alt = "necklace">
+                    <img src="Milktea.jpg" class ="milktea" alt = "milktea ">
+                    <img src="Totebag.jpg" class ="totebag" alt = "tote bag ">
+                    <img src="Necklace.jpg" class ="necklace" alt = "necklace">
                     
                 </div>
             </section>
