--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <section id="business">
                 <div class="section-inner">
                     <h2>This is my Business</h2>
-                    <img src="Milktea.jpg" class ="milktea" alt = "milktea ">
-                    <img src="Totebag.jpg" class ="totebag" alt = "tote bag ">
-                    <img src="Necklace.jpg" class ="necklace" alt = "necklace">
+                    <img src="Milktea.JPG" class ="milktea" alt = "milktea ">
+                    <img src="Totebag.JPG" class ="totebag" alt = "tote bag ">
+                    <img src="Necklace.JPG" class ="necklace" alt = "necklace">
                     
                 </div>
             </section>
